Add statistics per hour